Fixed email optin form input issue on ios

--- a/themes/daily/source/css/style.scss
+++ b/themes/daily/source/css/style.scss
@@ -73,6 +73,8 @@ form {
 }
 
 input {
+	-webkit-appearance: none; 
+	-webkit-border-radius: 0;
   padding: 0.5em 0.75em;
   width: 200px;
 }
